test/scripted/compilation/errors/expr_category.decl.bnj
# test:subtest
# test:error 5:11 "expected type, got value"
# test:error 6:13 "expected type, got value"

func f1(a: 0) {}
func f2() -> 0 {}

# test:subtest
# test:error 13:22 "expected type, got value"
# test:error 14:22 "expected type, got value"

proto P {
    func f1(self, a: 0);
    func f2(self) -> 0;
}

# test:subtest
# test:error 21:19 "expected type, got value"
# test:error 22:21 "expected type, got value"

native func f1(a: 0);
native func f2() -> 0;

# test:subtest
# test:error 28:11 "expected type, got value"
# test:error 29:17 "expected value, got type"

const C1: 0 = 0;
const C2: i32 = i32;

# test:subtest
# test:error 36:12 "expected type, got value"
# test:error 40:12 "expected type, got value"

struct S1 {
    var f: 0;
}

# TODO: The error message should probably be something like "expected proto, got value"
struct S2: 0 {}

# test:subtest
# test:error 45:8 "expected type, got value"

var v: 0;

# test:subtest
# test:error 50:15 "expected type, got value"

native var v: 0;

# test:subtest
# test:error 56:9 "expected value, got type"

enum E {
    V = i32,
}

# test:subtest
# test:error 63:15 "expected type, got value"

union U {
    case C(f: 0);
}

# test:subtest
# test:error 69:10 "expected type, got value"

type A = 0;
